Changing url and conn props to ibm:passwork